overlay z-index fix

--- a/public/stylesheets/newUserOverlay.css
+++ b/public/stylesheets/newUserOverlay.css
@@ -13,7 +13,7 @@
   align-items: center;
   flex-direction: column;
   border-radius: 3px;
-  z-index: 2;
+  z-index: 5;
 }
 .closeButton {
   color: #c6c6c6;
